add devise views

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+<% content_for :title do %>
+  Esqueceu sua senha?
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+
+  <div class="mt-12 space-y-3 ml-5">
+    <h2>Insira seu email para receber as instruções de recuperação de senha<h2>
+    <%= f.email_field :email,
+                        autofocus: true,
+                        autocomplete: "email",
+                        placeholder: 'Digite seu email',
+                        class: 'w-full -ml-10 text-center pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500' %>
+
+  </div>
+
+  <div class="py-3 flex flex-col items-center">
+    <%= f.submit 'Enviar instruções', class: 'w-36 bg-indigo-300 mb-2 hover:bg-indigo-500 p-2 rounded rounded-lg text-white' %>
+    <%= link_to 'Voltar', user_session_path, class:'hover:text-indigo-400'%>
+  </div>
+<% end %>
