--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   Registrar-se
 <% end %>
 <div>
-  <p>Ja tenha uma <%= link_to 'conta',
+  <p>Ja tenho uma <%= link_to 'conta',
                       new_user_session_path,
                       class: 'text-indigo-500' %>.</p>
 </div>
